--- a/pages/fundamentals/p2p.mdx
+++ b/pages/fundamentals/p2p.mdx
@@ -1,1 +1,12 @@
-# P2P
+import { Callout } from 'nextra-theme-docs'
+
+# 🚧 Peer-to-Peer
+
+<Callout type="warning" emoji="⚠️">
+    P2p is not supported yet on Deoxys full nodes. Please refer to the [Version](/) section for official releases.
+</Callout>
+
+<Callout type="info" emoji="ℹ️">
+    For more informations regarding Starknet p2p specs please refer to the [Official Specs](https://github.com/starknet-io/starknet-p2p-specs).
+</Callout>
+
