--- a/pages/fundamentals/synchronization.mdx
+++ b/pages/fundamentals/synchronization.mdx
@@ -1,38 +1,44 @@
+import { Callout } from 'nextra-theme-docs'
+
 # Synchronization
 
-## There are three main synchronization modes
+## Synchronization modes
 
-* snap sync
-	* the fastest way to sync to the network (syncs to mainnet in \~1 hours)
-	* downloads only the latest state, headers, and optionally bodies and receipts
-* fast sync
-	* slower than snap sync
-	* useful on nethermind-only chains (like Gnosis), where snap sync is not available for now
-	* downloads only the latest state, headers, and optionally bodies and receipts
-* archive sync
-	* heavy historical sync verifying all the transactions and keeping all the historical state
-	* you can run it like this `./Nethermind.Runner --config mainnet_archive`
+* Snap Sync
+	* Available using the **`--snap <BLOCK_NUMBER>`** command
+	* The fastest way to sync to the desired network
+	* Download the same state as full sync but starts from the desired and available snapshots
+	* It is less secure than full sync (please only use snapshots from trusted parties)
+* Full Sync
+	* Sync from the genesis of the desired network
+	* Slower than snap sync
+	* Downloads the entire state excepting receipts
+* Archive Sync
+	* Sync from the genesis of the desired network
+	* The slowest way to sync the desired network
+	* Heavy storage usage
+	* Not available on Deoxys nodes yet
 
-| Sync Mode                                                  | Disk Space needed | Full current state | Full current and all historical states | Can sync a full archive node from this | Time to sync | Time to RPC |
-|------------------------------------------------------------|-------------------|--------------------|----------------------------------------|----------------------------------------|--------------|-------------|
-| archive                                                    | \~12TB            | YES                | YES                                    | YES                                    | \~3 weeks    | \~3 weeks   |
-| snap/fast sync with all bodies and receipts                | \~800GB           | YES                | NO                                     | YES                                    | \~20 hours   | \~20 hours  |
-| default snap/fast sync (with barriers set to support Eth2) | \~500GB           | YES                | NO                                     | NO                                     | \~11 hours   | \~11 hours  |
-| snap/fast sync without receipts                            | \~450GB           | YES                | NO                                     | YES                                    | \~12 hours   | \~12 hours  |
-| snap/fast sync without bodies and receipts                 | \~200GB           | YES                | NO                                     | NO                                     | \~9 hours    | \~9 hours   |
+| Sync Mode                                                  | Disk Space needed | Full current state | Full current and all receipts          | Time to sync | Time to RPC |
+|------------------------------------------------------------|-------------------|--------------------|----------------------------------------|--------------|-------------|
+| Snap                                                    	 | \~12TB            | YES                | NO                                    | \~4 hours    | \~4 hours   |
+| Full              										 | \~800GB           | YES                | NO                                    | \~72 hours   | \~72 hours  |
+| Archive 													 | n\a         		 | YES                | YES                                    | n\a   	      | n\a  		|
 
-## Snap Sync
+<Callout type="info" emoji="ℹ️">
+	Syncing a node in Full or Snap sync doesn't means you don't have access to receipts, those are reexecuted and generated internally by the node when required.
+</Callout>
 
-Snap sync allows a node to perform the initial synchronization and download of Ethereum’s state up to 10 times faster
-than using fast sync.
+## Addtional modes
 
-#### How to Enable
+They're some additional modes you may want to use when syncing a Deoxys instance, for exemple for dev purposes 
 
-Snap sync is enabled by default for majority of networks. To make sure, check if`SnapSync` is set to `true` in the Sync
-module of your `.cfg` file
+* Disable state root
+	* Available using the **`--disable-root`** command
+	* Doesn't compute commitments
+	* Syncs more than 3x faster than a Full Sync
+	* The fastest way to sync to the desired network (yes we lied above :)
 
-```
-"Sync": {
-	"SnapSync": true
-}
-```
+<Callout type="warning" emoji="⚠️">
+	Syncing a node in `--disable-root` means that you're not verifying the integrity of the state you're currently syncing. Only do it if you're aware of what you're doing.
+</Callout>
