--- a/pages/get_started/requirements.mdx
+++ b/pages/get_started/requirements.mdx
@@ -1,9 +1,13 @@
-import { Steps } from 'nextra-theme-docs'
-import { Callout } from 'nextra-theme-docs'
-import { Cards, Card } from 'nextra/components'
-import { FontAwesomeIcon } from '@fortawesome/react-fontawesome';
-import { faLinux, faApple, faWindows } from '@fortawesome/free-brands-svg-icons';
-import { Tabs, Tab } from 'nextra/components'
+import { Steps } from "nextra-theme-docs";
+import { Callout } from "nextra-theme-docs";
+import { Cards, Card } from "nextra/components";
+import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
+import {
+  faLinux,
+  faApple,
+  faWindows,
+} from "@fortawesome/free-brands-svg-icons";
+import { Tabs, Tab } from "nextra/components";
 
 # System Requirements
 
@@ -36,18 +40,19 @@ Deoxys is designed to work seamlessly on a variety of modern _64-bit_ operating 
 </Tabs>
 
 <Callout type="info" emoji="ℹ️">
-	Deoxys does not currently support the AArch64 (ARM64) architecture for Windows.
+  Deoxys does not currently support the AArch64 (ARM64) architecture for
+  Windows.
 </Callout>
 
 ### Hardware Requirements
 
 For optimal performance of Deoxys, the following hardware configurations are recommended:
 
-| Network                 	| Memory | CPU Cores |
-|---------------------------|:------:|:---------:|
-| **Mainnet**     			| 16 GB  | 4         |
-| **Testnet (Sepolia)**     | 8 GB 	 | 4         |
-| **Appchains**        		| 8 GB   | 4         |
+| Network               | Memory | CPU Cores |
+| --------------------- | :----: | :-------: |
+| **Mainnet**           | 16 GB  |     4     |
+| **Testnet (Sepolia)** |  8 GB  |     4     |
+| **Appchains**         |  8 GB  |     4     |
 
 ### Disk Requirements
 
@@ -72,5 +77,5 @@ The sync mode selected for Deoxys can greatly affect disk usage:
 For further details, it's advisable to refer to the specific documentation regarding Deoxys' implementation of these modes.
 
 <Callout type="warning" emoji="⚠️">
-	Deoxys currently supports **Full Node** mode only 
+  Deoxys currently supports **Full Node** mode only
 </Callout>
