--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,7 @@
-import { BigLogo } from '../theme.config.tsx'
+import { BigLogo } from "../theme.config.tsx";
 
 # Introduction and overview
+
 Welcome to Deoxys Starknet full node Client documentation. Deoxys is a Starknet full node client implementation written in [Rust](https://www.rust-lang.org/) and powered by [Substrate](https://substrate.io/).
 
 Built by the [Kasar](https://kasar.io) laboratory, our goal, beyond providing diversity and performances, is to make it easy to launch and manage a Starknet full node client by seeking the perfect harmony between storage, sync time, and RPC latency, while providing a high-level tooling suit. With an easy and quick access to the Starknet state, so that any rpc provider, company, or individual can benefit from it.
@@ -11,6 +12,6 @@ Your experience and feedback are invaluable to us, and we encourage your input t
 
 <br />
 <br />
-<div style={{ display: 'flex', justifyContent: 'center' }}>
+<div style={{ display: "flex", justifyContent: "center" }}>
   <BigLogo />
 </div>
