--- a/pages/get_started/install.mdx
+++ b/pages/get_started/install.mdx
@@ -1,20 +1,23 @@
-import { Steps } from 'nextra-theme-docs'
-import { Callout } from 'nextra-theme-docs'
-import { Cards, Card } from 'nextra/components'
-import { FontAwesomeIcon } from '@fortawesome/react-fontawesome';
-import { faLinux, faApple, faWindows } from '@fortawesome/free-brands-svg-icons';
-import { Tabs, Tab } from 'nextra/components'
-
+import { Steps } from "nextra-theme-docs";
+import { Callout } from "nextra-theme-docs";
+import { Cards, Card } from "nextra/components";
+import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
+import {
+  faLinux,
+  faApple,
+  faWindows,
+} from "@fortawesome/free-brands-svg-icons";
+import { Tabs, Tab } from "nextra/components";
 
 # Installing Deoxys
 
 In this section, we will guide you through the build and run process so that you can run your own Deoxys client, and query the Starknet blockchain as smoothly as possible.
 
 We want anyone to be able to launch a Deoxys full node, which is why we've divided this section into 3 difficulty levels:
+
 - [**Low-level**](#low-level-installation-from-source) (from source directly)
 - [**Mid-level**](#mid-level-installation) (from Docker or script recomanded)
 - [**High-level**](#high-level-installation-clicknplay) (from the Deoxys click'n'play app)
-
 
 ## Low level Installation
 
@@ -25,19 +28,19 @@ We want anyone to be able to launch a Deoxys full node, which is why we've divid
 
 We first need to make sure you have everything needed to complete this tutorial.
 
-| Dependency  |  Version | Installation |
-|---|---|---|
-| Rust  | rustc 1.69.0-nightly  | `curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs \| sh` <br></br>`rustup toolchain install nightly` |
-| libssl-dev | Latest | `apt-get install -y libssl-dev` |
-| clang-11 | 11.0 | `apt-get install -y clang-11` |
-| g++ | Latest | `apt-get install -y g++` |
-| llvm | Latest | `apt-get install -y llvm` |
-| protobuf-compiler | Latest | `apt-get install -y protobuf-compiler` |
-| libasound2-dev | Latest | `apt-get install -y libasound2-dev` |
-| pkg-config | Latest | `apt-get install -y pkg-config` |
-| libz-dev | Latest | `apt-get install -y libz-dev` |
-| zstd | Latest | `apt-get install -y zstd` |
-| build-essential | Latest | `apt-get install -y build-essential` |
+| Dependency        | Version              | Installation                                                                                                  |
+| ----------------- | -------------------- | ------------------------------------------------------------------------------------------------------------- |
+| Rust              | rustc 1.69.0-nightly | `curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs \| sh` <br></br>`rustup toolchain install nightly` |
+| libssl-dev        | Latest               | `apt-get install -y libssl-dev`                                                                               |
+| clang-11          | 11.0                 | `apt-get install -y clang-11`                                                                                 |
+| g++               | Latest               | `apt-get install -y g++`                                                                                      |
+| llvm              | Latest               | `apt-get install -y llvm`                                                                                     |
+| protobuf-compiler | Latest               | `apt-get install -y protobuf-compiler`                                                                        |
+| libasound2-dev    | Latest               | `apt-get install -y libasound2-dev`                                                                           |
+| pkg-config        | Latest               | `apt-get install -y pkg-config`                                                                               |
+| libz-dev          | Latest               | `apt-get install -y libz-dev`                                                                                 |
+| zstd              | Latest               | `apt-get install -y zstd`                                                                                     |
+| build-essential   | Latest               | `apt-get install -y build-essential`                                                                          |
 
 You can use this command to easily install all necessary dependencies:
 
@@ -91,11 +94,12 @@ cargo build --profile=production
 This command will start the Deoxys client with a basic set arguments which will begin the synchronization with the Starknet network automatically:
 
 ```bash
-cargo run --release -- --dev --sealing=manual 
+cargo run --release -- --dev --sealing=manual
 ```
 
 <Callout type="info" emoji="ℹ️">
-  We now recomand you to head up to the [Configuration](/) section to custom your node parameters
+  We now recomand you to head up to the [Configuration](/) section to custom
+  your node parameters
 </Callout>
 
 </Steps>
@@ -112,46 +116,61 @@ This is the recomanded way to easily install and run deoxys it only requires a t
 
 {/* prettier-ignore */}
 {/* prettier-ignore */}
-<Tabs items={['MacOS', 'Linux', 'Windows']}>
+
+<Tabs items={["MacOS", "Linux", "Windows"]}>
   <Tab>
-    **MacOS**: To install Docker on MacOS, follow these steps:
-    1. Visit the [Docker Hub](https://hub.docker.com/editions/community/docker-ce-desktop-mac/) and download Docker Desktop for Mac.
-    2. Open the downloaded `.dmg` file and drag the Docker icon to your Applications folder to begin the installation.
-    3. Once installed, launch Docker from your Applications folder. Docker will request your admin password to complete the setup.
-    4. After installation, you can open a terminal and run `docker --version` to verify that Docker has been installed successfully.
+    **MacOS**: To install Docker on MacOS, follow these steps: 1. Visit the
+    [Docker
+    Hub](https://hub.docker.com/editions/community/docker-ce-desktop-mac/) and
+    download Docker Desktop for Mac. 2. Open the downloaded `.dmg` file and drag
+    the Docker icon to your Applications folder to begin the installation. 3.
+    Once installed, launch Docker from your Applications folder. Docker will
+    request your admin password to complete the setup. 4. After installation,
+    you can open a terminal and run `docker --version` to verify that Docker has
+    been installed successfully.
   </Tab>
   <Tab>
-    **Linux**: Docker installation on Linux varies by distribution, but here are the general steps:
-    1. Update your package manager index by running `sudo apt-get update` (This command is for distributions using `apt` like Ubuntu or Debian).
-    2. Install prerequisite packages which allow `apt` to use packages over HTTPS: `sudo apt-get install apt-transport-https ca-certificates curl software-properties-common`.
-    3. Add Docker's official GPG key: `curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -`.
-    4. Verify that you now have the key with the fingerprint by searching for the last 8 characters of the fingerprint.
-    5. Set up the Docker repository by running `sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"`.
-    6. Update the `apt` package index again: `sudo apt-get update`.
-    7. Install Docker: `sudo apt-get install docker-ce`.
-    8. To verify Docker is installed correctly, run `docker run hello-world`.
-    Note: The above commands are tailored for Ubuntu. Please adjust for your particular Linux distribution.
+    **Linux**: Docker installation on Linux varies by distribution, but here are
+    the general steps: 1. Update your package manager index by running `sudo
+    apt-get update` (This command is for distributions using `apt` like Ubuntu
+    or Debian). 2. Install prerequisite packages which allow `apt` to use
+    packages over HTTPS: `sudo apt-get install apt-transport-https
+    ca-certificates curl software-properties-common`. 3. Add Docker's official
+    GPG key: `curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo
+    apt-key add -`. 4. Verify that you now have the key with the fingerprint by
+    searching for the last 8 characters of the fingerprint. 5. Set up the Docker
+    repository by running `sudo add-apt-repository "deb [arch=amd64]
+    https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"`. 6.
+    Update the `apt` package index again: `sudo apt-get update`. 7. Install
+    Docker: `sudo apt-get install docker-ce`. 8. To verify Docker is installed
+    correctly, run `docker run hello-world`. Note: The above commands are
+    tailored for Ubuntu. Please adjust for your particular Linux distribution.
   </Tab>
   <Tab>
-    **Windows**: To install Docker on Windows, ensure you meet the following requirements:
-    - Windows 10 64-bit: Pro, Enterprise, or Education (Build 15063 or later).
-    - Hyper-V and Containers Windows features must be enabled.
-    Here are the steps:
-    1. Visit the [Docker Hub](https://hub.docker.com/editions/community/docker-ce-desktop-windows/) to download Docker Desktop for Windows.
-    2. Run the downloaded Docker Desktop installer.
-    3. Follow the installation instructions. You might be prompted to logout and log back in, or reboot your computer before you can use Docker.
-    4. After installation, run Docker by searching for it in the Start menu and selecting Docker Desktop.
-    5. To verify Docker has been installed, open a command prompt and enter `docker --version`.
-    Note: If your system does not support Hyper-V or if you are running Windows 10 Home, you may need to install Docker Toolbox instead.
+    **Windows**: To install Docker on Windows, ensure you meet the following
+    requirements: - Windows 10 64-bit: Pro, Enterprise, or Education (Build
+    15063 or later). - Hyper-V and Containers Windows features must be enabled.
+    Here are the steps: 1. Visit the [Docker
+    Hub](https://hub.docker.com/editions/community/docker-ce-desktop-windows/)
+    to download Docker Desktop for Windows. 2. Run the downloaded Docker Desktop
+    installer. 3. Follow the installation instructions. You might be prompted to
+    logout and log back in, or reboot your computer before you can use Docker.
+    4. After installation, run Docker by searching for it in the Start menu and
+    selecting Docker Desktop. 5. To verify Docker has been installed, open a
+    command prompt and enter `docker --version`. Note: If your system does not
+    support Hyper-V or if you are running Windows 10 Home, you may need to
+    install Docker Toolbox instead.
   </Tab>
 </Tabs>
-
 
 ### Run docker image
 
 Once you have successfully installed Docker, you can now run Deoxys using the images available here: [deoxys-v0.1.0-nightly](https://link).
+
 <Callout type="info" emoji="ℹ️">
-  This is a default configuration. For more information on possible configurations, please visit the [Configuration](../fundamentals/configuration) section.
+  This is a default configuration. For more information on possible
+  configurations, please visit the
+  [Configuration](../fundamentals/configuration) section.
 </Callout>
 
 ```bash
@@ -165,7 +184,8 @@ Once you have successfully installed Docker, you can now run Deoxys using the im
 ```
 
 <Callout type="info" emoji="ℹ️">
-  Now you can head up to the [Metrics](/) section to easily deploy a Grafana and Prometheus dashboard
+  Now you can head up to the [Metrics](/) section to easily deploy a Grafana and
+  Prometheus dashboard
 </Callout>
 
 </Steps>
@@ -182,8 +202,7 @@ This is the fastest way to get a Deoxys up and running following your needs
 
 ```
 
-### Follow the menu 
-
+### Follow the menu
 
 ### Check logs
 
@@ -192,7 +211,8 @@ This is the fastest way to get a Deoxys up and running following your needs
 ```
 
 <Callout type="info" emoji="ℹ️">
-  Now you can head up to the [Metrics](/) section to easily deploy a Grafana and Prometheus dashboard
+  Now you can head up to the [Metrics](/) section to easily deploy a Grafana and
+  Prometheus dashboard
 </Callout>
 
 </Steps>
@@ -211,31 +231,36 @@ You just need to install it, fill out your parameters and enjoy!
 First you'll need to download the Deoxys app for your operating system
 
 <Cards>
-  <Card 
-    icon={<FontAwesomeIcon icon={faLinux} />} 
-    title="Download" 
-    description="Deoxys App 1.0.0-nightly for Ubuntu (18.04 and later)" 
-    href="your-download-link-for-linux" 
+  <Card
+    icon={<FontAwesomeIcon icon={faLinux} />}
+    title="Download"
+    description="Deoxys App 1.0.0-nightly for Ubuntu (18.04 and later)"
+    href="your-download-link-for-linux"
   />
-  <Card 
-    icon={<FontAwesomeIcon icon={faApple} />} 
-    title="Download" 
-    description="Deoxys Node Manager 1.0.0-nightly macOS (10.15 Catalina and later)" 
-    href="your-download-link-for-macos" 
+  <Card
+    icon={<FontAwesomeIcon icon={faApple} />}
+    title="Download"
+    description="Deoxys Node Manager 1.0.0-nightly macOS (10.15 Catalina and later)"
+    href="your-download-link-for-macos"
   />
-  <Card 
-    icon={<FontAwesomeIcon icon={faWindows} />} 
-    title="Download" 
-    description="Deoxys Node Manager 1.0.0-nightly Windows 10 and later" 
-    href="your-download-link-for-windows" 
+  <Card
+    icon={<FontAwesomeIcon icon={faWindows} />}
+    title="Download"
+    description="Deoxys Node Manager 1.0.0-nightly Windows 10 and later"
+    href="your-download-link-for-windows"
   />
 </Cards>
 
 <br />
 <br />
 
-<div style={{ display: 'flex', justifyContent: 'center' }}>
-  <img src="../static/img/main-app.png" height="500" width="500" style={{ borderRadius: '10px' }} />
+<div style={{ display: "flex", justifyContent: "center" }}>
+  <img
+    src="../static/img/main-app.png"
+    height="500"
+    width="500"
+    style={{ borderRadius: "10px" }}
+  />
 </div>
 
 ### Launch it
@@ -255,14 +280,21 @@ Vous devrez a present mettre en place les parametre necessaire afin de run votre
 Pour plus d'information sur les parametres possible veuillez vous rendre dans la category [Configuration](../fundamentals/configuration)
 
 <Callout type="warning" emoji="⚠">
-  Parmis ces parametre il vous faudra obligatoirement un L1 endpoint access url que vous pourrez simplement obtenir en suivant le tutoriel present dans la categorie [L1 verification](../fundamentals/l1)
+  Parmis ces parametre il vous faudra obligatoirement un L1 endpoint access url
+  que vous pourrez simplement obtenir en suivant le tutoriel present dans la
+  categorie [L1 verification](../fundamentals/l1)
 </Callout>
 
 <br />
 <br />
 
-<div style={{ display: 'flex', justifyContent: 'center' }}>
-  <img src="../static/img/config-app.png" height="500" width="500" style={{ borderRadius: '10px' }} />
+<div style={{ display: "flex", justifyContent: "center" }}>
+  <img
+    src="../static/img/config-app.png"
+    height="500"
+    width="500"
+    style={{ borderRadius: "10px" }}
+  />
 </div>
 
 ### Run Deoxys
@@ -273,13 +305,18 @@ Pour plus d'information sur la Deoxys App veuillez vous rendre dans la categorie
 <br />
 <br />
 
-<div style={{ display: 'flex', justifyContent: 'center' }}>
-  <img src="../static/img/run-app.png" height="500" width="500" style={{ borderRadius: '10px' }} />
+<div style={{ display: "flex", justifyContent: "center" }}>
+  <img
+    src="../static/img/run-app.png"
+    height="500"
+    width="500"
+    style={{ borderRadius: "10px" }}
+  />
 </div>
 
 </Steps>
 
-*Deoxys App is a project inspired by [Madara tsukuyomi](https://github.com/keep-starknet-strange/madara-tsukuyomi) from the Starknet exploration team.*
+_Deoxys App is a project inspired by [Madara tsukuyomi](https://github.com/keep-starknet-strange/madara-tsukuyomi) from the Starknet exploration team._
 
 Now that you know how to launch a Deoxys full node, you might want to set some parameters in order to customize it.
 Therefore, you can go to the following section: [Configuration](https://link)
