--- a/pages/get_started/install.mdx
+++ b/pages/get_started/install.mdx
@@ -16,7 +16,7 @@ In this section, we will guide you through the build and run process so that you
 We want anyone to be able to launch a Madara full node, which is why we've divided this section into 3 difficulty levels:
 
 - [**Low-level**](#low-level-installation-from-source) (from source directly)
-- [**Mid-level**](#mid-level-installation) (from Docker or Script **recomanded**)
+- [**Mid-level**](#mid-level-installation) (from Docker **recomanded**)
 - [**High-level**](#high-level-installation-clicknplay) (Coming soon)
 
 ## Low level Installation
