--- a/pages/get_started/update.mdx
+++ b/pages/get_started/update.mdx
@@ -26,7 +26,7 @@ Depending on how you chose to launch your customer, you can update it in the sam
 <Steps>
 ### Update code
 
-First, navigate to your Madara project directory and fetch the latest changes from the Official [Madara](https://github.com/KasarLabs/Madara) repository.
+First, navigate to your Madara project directory and fetch the latest changes from the Official [Madara](https://github.com/KasarLabs/deoxys) repository.
 
 ```bash
 cd <your-destination-path>
