--- a/pages/get_started/install.mdx
+++ b/pages/get_started/install.mdx
@@ -40,11 +40,11 @@ curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s
 
 ### Get code
 
-Fetch the code from the Official [Madara](https://github.com/KasarLabs/deoxys) repository in the folder of your choice.
+Fetch the code from the Official [Madara](https://github.com/keep-starknet-strange/madara) repository in the folder of your choice.
 
 ```bash
 cd <your-destination-path>
-git clone https://github.com/KasarLabs/deoxys .
+git clone https://github.com/keep-starknet-strange/madara .
 ```
 
 ### Build program
