--- a/pages/about/liscence.mdx
+++ b/pages/about/liscence.mdx
@@ -1,8 +1,3 @@
 # Liscence
 
-Deoxys is an open-source software built by Kasar Labs in collaboration with the Starknet exploration team.
-
-<br />
-<div align="center">
-  <img src="../static/img/deoxys-about.gif" height="400px" width="400px" />
-</div>
+Madara is an open-source software built in collaboration with multiple teams under [Apache 2.0 Liscence](https://github.com/keep-starknet-strange/madara/blob/main/LICENSE).
