--- a/pages/fundamentals/configuration.mdx
+++ b/pages/fundamentals/configuration.mdx
@@ -25,11 +25,6 @@ For a comprehensive list of command-line options:
 cargo run -- --help
 ```
 
-<Callout type="warning" emoji="⚠️">
-  Some of the command-line options are from Substrate and not supported by
-  Madara. Please reffer to the next section for the available commands.
-</Callout>
-
 Below are some essential command-line options and a categorized list of advanced configurations:
 
 ### Basic Command-Line Options
@@ -162,7 +157,7 @@ Possible values:
 <br />
 - **`--telemetry-url <URL VERBOSITY>`**: The URL of the telemetry server to connect to. This flag can be passed multiple times as a means to specify multiple telemetry endpoints. Verbosity levels range from 0-9, with 0 denoting the least verbosity. Expected format is 'URL VERBOSITY', e.g. `--telemetry-url 'wss://foo/bar 0'`.
 <br />
-- **`--no-telemetry`**: Disable connecting to the Substrate telemetry server. Telemetry is on by default on global chains.
+- **`--no-telemetry`**: Disable connecting to the telemetry server. Telemetry is on by default on global chains.
 <br />
 - **`--prometheus-port <PORT>`**: Specify Prometheus exporter TCP Port.
 <br />
